# titanic

./: Project-Titanic.py  README.md  last_minute.py  main.py  pkgx.yaml  pyproject.toml
assets/: Background.jpg:Zone.Identifier  Titanic Deck Resized.png:Zone.Identifier  layout.css  typography.css
